--- a/public_html/TODO.txt
+++ b/public_html/TODO.txt
@@ -7,4 +7,5 @@
 7. add icon showing drop down feature in 'assets'
 8. remove <br> in index_form between expanded exchange button
 9. change auth check on admin_ pages from 1 to admin id
+10. fix calc for loss/gain (change negative number on puchase in index.php for to positive.)
 
