--- a/public_html/TODO.txt
+++ b/public_html/TODO.txt
@@ -4,6 +4,17 @@ http://mpex.co/
 http://templated.co/ion
 http://almsaeedstudio.com/preview
 
+https://www.havelockinvestments.com
+http://www.btcalpha.com/
+http://bitcoin-assets.com/
+https://coinbr.com
+http://venetfx.com/
+https://7cbit.com
+
+--GAMBLING--
+http://bitbet.us/
+https://www.peerbet.org/
+
 TO DO LIST:
 - Add vote option
 - Add dividend, allow owner of company to give money to shareholders.
